--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,12 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
+Imports:
+    dplyr,
+    lifecycle,
+    utils
+Roxygen: list(markdown = TRUE)
