--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,10 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Imports:
+    data.table,
     dplyr,
     lifecycle,
+    magrittr,
+    tibble,
     utils
 Roxygen: list(markdown = TRUE)
