--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: abcds
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Eases the Reporting and Analysis of ABC-DS Data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: c(
+    person(c("Brian", "C."), "Helsel", email = "bhelsel@kumc.edu", role = c("aut", "cre"))
+    )
+Description: Eases the reporting and analysis of data from the 
+    Alzheimer's Biomarker Consortium - Down Syndrome (ABC-DS) Study. 
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -18,3 +19,5 @@ Imports:
     tibble,
     utils
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/bhelsel/abcds
+BugReports: https://github.com/bhelsel/abcds/issues
