--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,18 @@ export(read_health_history)
 export(read_neuro_exam)
 import(magrittr)
 importFrom(data.table,`:=`)
+importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,select)
+importFrom(foreach,`%dopar%`)
+importFrom(foreach,foreach)
 importFrom(lifecycle,deprecated)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(plyr,rbind.fill)
 importFrom(tibble,tibble)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
