--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,10 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 .Rproj.user
+
+# Remove documents required for deployment
+inst/app/kbit2/*
+!inst/app/kbit2/app.R
+!inst/app/kbit2/www
+
+*.DS_Store
