--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_latency)
 export(apply_factor_labels)
 export(apply_labels)
 export(calculate_kbit2_score)
+export(deploy_kbit2_app)
 export(print_kbit2_results)
 export(read_apoe)
 export(read_cognitive)
@@ -24,6 +25,7 @@ importFrom(lifecycle,deprecated)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(plyr,rbind.fill)
+importFrom(shiny,runApp)
 importFrom(tibble,tibble)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
