--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,8 @@
 ^LICENSE\.md$
 ^abcds\.Rproj$
 ^\.Rproj\.user$
+
+# Remove documents required for deployment
+inst/app/kbit2/*
+!inst/app/kbit2/app.R
+!inst/app/kbit2/www
